<resources>
    <string name="app_name">Vier Apps</string>
    <string name="counter_app">Counter</string>
    <string name="random_app">Random</string>
    <string name="stop_app">Stop Watch</string>
    <string name="date_app">Date</string>
    <string name="toast_text">Toast</string>
    <string name="count_text">Count</string>
    <string name="reset_text">Reset</string>
    <string name="toast_value">Raised One!</string>
    <string name="get_random">Get Number</string>
    <string name="min_num">Enter Min</string>
    <string name="max_num">Enter max</string>
    <string name="count_down">Count Down</string>
    <string name="birthday">Birthday!</string>
    <string name="day_date">Day</string>
    <string name="month_value">Month</string>
    <string name="year_value">Year</string>
    <string name="life">You Have Lived For!</string>
    <string name="count_in_minute">Count Minutes</string>
    <string name="time_up">Time Up!</string>
    <string name="reset_countDown">Reset Count</string>
    <string name="battery_broadcast">"Battery BroadCast"</string>
    <string name="power_connected">On Power \'n light</string>
    <string name="power_disconnected">No Power \'n Dark</string>
    <string name="credit">Credit</string>
</resources>