<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/one_app"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corners">

            <ImageView
                android:id="@+id/counter_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/counter_app"
                android:layout_marginBottom="45dp"
                android:scaleType="center"/>

            <TextView
                android:id="@+id/counter_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counter_app"
                android:textColor="@color/foreground"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_app"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corners">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/random_app"
                android:layout_marginBottom="45dp"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/random_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_app"
                android:textColor="@color/foreground"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/three_app"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corners">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stop_app"
                android:layout_marginBottom="45dp"
                android:scaleType="center"/>

            <TextView
                android:id="@+id/stop_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_app"
                android:textColor="@color/foreground"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four_app"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corners">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/date_app"
                android:layout_marginBottom="45dp"
                android:scaleType="center"/>

            <TextView
                android:id="@+id/date_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_app"
                android:textColor="@color/foreground"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/credit"
        android:onClick="go_credit"
        android:backgroundTint="@color/background"/>
</LinearLayout>